// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`js handler > comment-ignore case 1`] = `
"const clipPath = [\`circle()\`];
document.documentElement.animate({
  clipPath
}, {
  duration: 500,
  easing: \\"tw-a\\",
  pseudoElement: '::view-transition-new(root)'
});
document.documentElement.animate({
  clipPath
}, {
  duration: 500,
  easing: /* tw-mangle ignore */'ease-out',
  pseudoElement: '::view-transition-new(root)'
});"
`;

exports[`js handler > common StringLiteral 1`] = `"element.innerHTML = \\"<div class=\\\\\\"tw-a tw-b\\\\\\">count is counter</div>\\";"`;

exports[`js handler > common StringLiteral with splitQuote false 1`] = `"element.innerHTML = '<div class=\\"dark:bg-zinc-800/30 lg:dark:bg-zinc-800/30\\">count is counter</div>';"`;

exports[`js handler > common TemplateElement 1`] = `
"const counter = 0;
element.innerHTML = \`<div class=\\"tw-a tw-b\\">count is \${counter}</div>\`;"
`;

exports[`js handler > eval script case 1`] = `
"(function (__unused_webpack_module, __webpack_exports__, __webpack_require__) {
  \\"use strict\\";

  eval(\\"__webpack_require__.r(__webpack_exports__);\\\\n/* harmony export */\\\\n__webpack_require__.d(__webpack_exports__, {\\\\n  /* harmony export */\\\\\\"render\\\\\\": function () {\\\\n    return (/* binding */render\\\\n    );\\\\n  }\\\\n  /* harmony export */\\\\n});\\\\n/* harmony import */\\\\nvar vue__WEBPACK_IMPORTED_MODULE_0__ = __webpack_require__( /*! vue */\\\\\\"../../node_modules/.pnpm/vue@3.2.47/node_modules/vue/dist/vue.runtime.esm-bundler.js\\\\\\");\\\\n/* harmony import */\\\\nvar _assets_logo_png__WEBPACK_IMPORTED_MODULE_1__ = __webpack_require__( /*! ./assets/logo.png */\\\\\\"./src/assets/logo.png\\\\\\");\\\\nconst _hoisted_1 = {\\\\n  class: \\\\\\"flex tw-a tw-b tw-c tw-d tw-e\\\\\\"\\\\n};\\\\nconst _hoisted_2 = /*#__PURE__*/(0, vue__WEBPACK_IMPORTED_MODULE_0__.createElementVNode)(\\\\\\"div\\\\\\", {\\\\n  class: \\\\\\"tw-f tw-g tw-h tw-c tw-d tw-i tw-j tw-k\\\\\\"\\\\n}, [/*#__PURE__*/(0, vue__WEBPACK_IMPORTED_MODULE_0__.createElementVNode)(\\\\\\"p\\\\\\", {\\\\n  class: \\\\\\"fixed tw-l tw-m flex tw-g tw-n tw-o tw-p tw-q tw-r tw-s tw-t tw-u tw-v tw-w tw-x tw-y tw-z tw-aa tw-ba tw-ca tw-da tw-ea\\\\\\"\\\\n}, [/*#__PURE__*/(0, vue__WEBPACK_IMPORTED_MODULE_0__.createTextVNode)(\\\\\\" Get started by editing\\\\xA0 \\\\\\"), /*#__PURE__*/(0, vue__WEBPACK_IMPORTED_MODULE_0__.createElementVNode)(\\\\\\"code\\\\\\", {\\\\n  class: \\\\\\"tw-i tw-fa\\\\\\"\\\\n}, \\\\\\"pages/index.tsx\\\\\\")]), /*#__PURE__*/(0, vue__WEBPACK_IMPORTED_MODULE_0__.createElementVNode)(\\\\\\"div\\\\\\", {\\\\n  class: \\\\\\"fixed tw-ga tw-l flex tw-ha tw-g tw-ia tw-n tw-ja tw-ka tw-la tw-ma tw-na tw-y tw-oa tw-z tw-pa\\\\\\"\\\\n}, [/*#__PURE__*/(0, vue__WEBPACK_IMPORTED_MODULE_0__.createElementVNode)(\\\\\\"a\\\\\\", {\\\\n  class: \\\\\\"tw-qa flex tw-ra tw-sa tw-ta tw-ua tw-va\\\\\\",\\\\n  href: \\\\\\"https://vercel.com?utm_source=create-next-app&utm_medium=default-template-tw&utm_campaign=create-next-app\\\\\\",\\\\n  target: \\\\\\"_blank\\\\\\",\\\\n  rel: \\\\\\"noopener noreferrer\\\\\\"\\\\n}, [/*#__PURE__*/(0, vue__WEBPACK_IMPORTED_MODULE_0__.createTextVNode)(\\\\\\" By \\\\\\"), /*#__PURE__*/(0, vue__WEBPACK_IMPORTED_MODULE_0__.createElementVNode)(\\\\\\"img\\\\\\", {\\\\n  src: _assets_logo_png__WEBPACK_IMPORTED_MODULE_1__,\\\\n  alt: \\\\\\"Vercel Logo\\\\\\",\\\\n  class: \\\\\\"tw-wa\\\\\\",\\\\n  priority: \\\\\\"\\\\\\"\\\\n})])])], -1 /* HOISTED */);\\\\nconst _hoisted_3 = /*#__PURE__*/(0, vue__WEBPACK_IMPORTED_MODULE_0__.createElementVNode)(\\\\\\"div\\\\\\", {\\\\n  class: \\\\\\"relative flex tw-ra tw-xa tw-ya tw-za tw-ab tw-bb tw-cb tw-db tw-eb tw-fb tw-gb tw-hb tw-ib tw-jb tw-kb tw-lb tw-mb tw-nb tw-ob tw-pb tw-qb tw-rb tw-sb tw-tb tw-ub tw-vb tw-wb\\\\\\"\\\\n}, [/*#__PURE__*/(0, vue__WEBPACK_IMPORTED_MODULE_0__.createElementVNode)(\\\\\\"img\\\\\\", {\\\\n  class: \\\\\\"relative tw-xb tw-wa\\\\\\",\\\\n  src: _assets_logo_png__WEBPACK_IMPORTED_MODULE_1__,\\\\n  alt: \\\\\\"Next.js Logo\\\\\\",\\\\n  priority: \\\\\\"\\\\\\"\\\\n})], -1 /* HOISTED */);\\\\nconst _hoisted_4 = /*#__PURE__*/(0, vue__WEBPACK_IMPORTED_MODULE_0__.createStaticVNode)(\\\\\\"<div class=\\\\\\\\\\\\\\"tw-yb grid tw-zb tw-ac tw-bc tw-cc\\\\\\\\\\\\\\"><a href=\\\\\\\\\\\\\\"https://nextjs.org/docs?utm_source=create-next-app&amp;utm_medium=default-template-tw&amp;utm_campaign=create-next-app\\\\\\\\\\\\\\" class=\\\\\\\\\\\\\\"group tw-dc border tw-ec tw-fc tw-gc tw-hc tw-ic tw-jc tw-kc tw-lc\\\\\\\\\\\\\\" target=\\\\\\\\\\\\\\"_blank\\\\\\\\\\\\\\" rel=\\\\\\\\\\\\\\"noopener noreferrer\\\\\\\\\\\\\\"><h2 class=\\\\\\\\\\\\\\"tw-mc tw-nc tw-oc\\\\\\\\\\\\\\"> Docs <span class=\\\\\\\\\\\\\\"tw-pc tw-qc tw-rc tw-sc\\\\\\\\\\\\\\">-&gt;</span></h2><p class=\\\\\\\\\\\\\\"tw-tc tw-uc tw-j tw-vc\\\\\\\\\\\\\\">Find in-depth information about Next.js features and API.</p></a><a href=\\\\\\\\\\\\\\"https://nextjs.org/learn?utm_source=create-next-app&amp;utm_medium=default-template-tw&amp;utm_campaign=create-next-app\\\\\\\\\\\\\\" class=\\\\\\\\\\\\\\"group tw-dc border tw-ec tw-fc tw-gc tw-hc tw-ic tw-jc tw-kc tw-lc\\\\\\\\\\\\\\" target=\\\\\\\\\\\\\\"_blank\\\\\\\\\\\\\\" rel=\\\\\\\\\\\\\\"noopener noreferrer\\\\\\\\\\\\\\"><h2 class=\\\\\\\\\\\\\\"tw-mc tw-nc tw-oc tw-wc\\\\\\\\\\\\\\"> Learn <span class=\\\\\\\\\\\\\\"tw-pc tw-qc tw-rc tw-sc\\\\\\\\\\\\\\">-&gt;</span></h2><p class=\\\\\\\\\\\\\\"tw-tc tw-uc tw-j tw-vc\\\\\\\\\\\\\\">Learn about Next.js in an interactive course with\\\\\\\\xA0quizzes!</p></a><a href=\\\\\\\\\\\\\\"https://vercel.com/templates?framework=next.js&amp;utm_source=create-next-app&amp;utm_medium=default-template-tw&amp;utm_campaign=create-next-app\\\\\\\\\\\\\\" class=\\\\\\\\\\\\\\"group tw-dc border tw-ec tw-fc tw-gc tw-hc tw-ic tw-jc tw-kc tw-lc\\\\\\\\\\\\\\" target=\\\\\\\\\\\\\\"_blank\\\\\\\\\\\\\\" rel=\\\\\\\\\\\\\\"noopener noreferrer\\\\\\\\\\\\\\"><h2 class=\\\\\\\\\\\\\\"tw-mc tw-nc tw-oc\\\\\\\\\\\\\\"> Templates <span class=\\\\\\\\\\\\\\"tw-pc tw-qc tw-rc tw-sc\\\\\\\\\\\\\\">-&gt;</span></h2><p class=\\\\\\\\\\\\\\"tw-tc tw-uc tw-j tw-vc\\\\\\\\\\\\\\">Discover and deploy boilerplate example Next.js\\\\\\\\xA0projects.</p></a><a href=\\\\\\\\\\\\\\"https://vercel.com/new?utm_source=create-next-app&amp;utm_medium=default-template-tw&amp;utm_campaign=create-next-app\\\\\\\\\\\\\\" class=\\\\\\\\\\\\\\"group tw-dc border tw-ec tw-fc tw-gc tw-hc tw-ic tw-jc tw-kc tw-lc\\\\\\\\\\\\\\" target=\\\\\\\\\\\\\\"_blank\\\\\\\\\\\\\\" rel=\\\\\\\\\\\\\\"noopener noreferrer\\\\\\\\\\\\\\"><h2 class=\\\\\\\\\\\\\\"tw-mc tw-nc tw-oc\\\\\\\\\\\\\\"> Deploy <span class=\\\\\\\\\\\\\\"tw-pc tw-qc tw-rc tw-sc\\\\\\\\\\\\\\">-&gt;</span></h2><p class=\\\\\\\\\\\\\\"tw-tc tw-uc tw-j tw-vc\\\\\\\\\\\\\\">Instantly deploy your Next.js site to a shareable URL with Vercel.</p></a></div>\\\\\\", 1);\\\\nconst _hoisted_5 = [_hoisted_2, _hoisted_3, _hoisted_4];\\\\nfunction render(_ctx, _cache) {\\\\n  return (0, vue__WEBPACK_IMPORTED_MODULE_0__.openBlock)(), (0, vue__WEBPACK_IMPORTED_MODULE_0__.createElementBlock)(\\\\\\"main\\\\\\", _hoisted_1, _hoisted_5);\\\\n} //# sourceURL=[module]\\\\n\\\\n//# sourceURL=webpack-internal:///../../node_modules/.pnpm/babel-loader@8.3.0_c3tfwv7p35clwcmkb5fnkshzei/node_modules/babel-loader/lib/index.js??clonedRuleSet-40.use[0]!../../node_modules/.pnpm/vue-loader@17.0.1_vue@3.2.47+webpack@5.79.0/node_modules/vue-loader/dist/templateLoader.js??ruleSet[1].rules[4]!../../node_modules/.pnpm/vue-loader@17.0.1_vue@3.2.47+webpack@5.79.0/node_modules/vue-loader/dist/index.js??ruleSet[0].use[0]!./src/App.vue?vue&type=template&id=7ba5bd90\\");
});"
`;

exports[`js handler > minified js true 1`] = `"const clipPath=[\`circle()\`];document.documentElement.animate({clipPath},{duration:500,easing:\\"tw-a\\",pseudoElement:\\"::view-transition-new(root)\\"});document.documentElement.animate({clipPath},{duration:500,easing:/* tw-mangle ignore */\\"ease-out\\",pseudoElement:\\"::view-transition-new(root)\\"});"`;

exports[`js handler > minified js with NODE_ENV 1`] = `"const clipPath=[\`circle()\`];document.documentElement.animate({clipPath},{duration:500,easing:\\"tw-a\\",pseudoElement:\\"::view-transition-new(root)\\"});document.documentElement.animate({clipPath},{duration:500,easing:/* tw-mangle ignore */\\"ease-out\\",pseudoElement:\\"::view-transition-new(root)\\"});"`;

exports[`js handler > nextjs server side mangle 1`] = `
"\\"use strict\\";

(() => {
  var exports = {};
  exports.id = 405;
  exports.ids = [405];
  exports.modules = {
    /***/957: /***/(__unused_webpack_module, __webpack_exports__, __webpack_require__) => {
      __webpack_require__.r(__webpack_exports__);
      /* harmony export */
      __webpack_require__.d(__webpack_exports__, {
        /* harmony export */\\"default\\": () => /* binding */Home
        /* harmony export */
      });
      /* harmony import */
      var react_jsx_runtime__WEBPACK_IMPORTED_MODULE_0__ = __webpack_require__(997);
      /* harmony import */
      var react_jsx_runtime__WEBPACK_IMPORTED_MODULE_0___default = /*#__PURE__*/__webpack_require__.n(react_jsx_runtime__WEBPACK_IMPORTED_MODULE_0__);
      /* harmony import */
      var next_font_google_target_css_path_pages_index_tsx_import_Inter_arguments_subsets_latin_variableName_inter___WEBPACK_IMPORTED_MODULE_2__ = __webpack_require__(941);
      /* harmony import */
      var next_font_google_target_css_path_pages_index_tsx_import_Inter_arguments_subsets_latin_variableName_inter___WEBPACK_IMPORTED_MODULE_2___default = /*#__PURE__*/__webpack_require__.n(next_font_google_target_css_path_pages_index_tsx_import_Inter_arguments_subsets_latin_variableName_inter___WEBPACK_IMPORTED_MODULE_2__);
      /* harmony import */
      var next_image__WEBPACK_IMPORTED_MODULE_1__ = __webpack_require__(395);
      /* harmony import */
      var next_image__WEBPACK_IMPORTED_MODULE_1___default = /*#__PURE__*/__webpack_require__.n(next_image__WEBPACK_IMPORTED_MODULE_1__);
      function Home() {
        return /*#__PURE__*/(0, react_jsx_runtime__WEBPACK_IMPORTED_MODULE_0__.jsxs)(\\"main\\", {
          className: \\"flex tw-a tw-b tw-c tw-d tw-e\\",
          children: [/*#__PURE__*/(0, react_jsx_runtime__WEBPACK_IMPORTED_MODULE_0__.jsxs)(\\"div\\", {
            className: \\"tw-f tw-g tw-h tw-c tw-d tw-i tw-j tw-k\\",
            children: [/*#__PURE__*/(0, react_jsx_runtime__WEBPACK_IMPORTED_MODULE_0__.jsxs)(\\"p\\", {
              className: \\"fixed tw-l tw-m flex tw-g tw-n tw-o tw-p tw-q tw-r tw-s tw-t tw-u tw-v tw-w tw-x tw-y tw-z  tw-aa tw-ba tw-ca tw-da tw-ea\\",
              children: [\\"Get started by editing\\\\xa0\\", /*#__PURE__*/react_jsx_runtime__WEBPACK_IMPORTED_MODULE_0__.jsx(\\"code\\", {
                className: \\"tw-i tw-fa\\",
                children: \\"pages/index.tsx\\"
              })]
            }), /*#__PURE__*/react_jsx_runtime__WEBPACK_IMPORTED_MODULE_0__.jsx(\\"div\\", {
              className: \\"fixed tw-ga tw-l flex tw-ha tw-g tw-ia tw-n tw-ja tw-ka tw-la tw-ma tw-na tw-y tw-oa tw-z tw-pa\\",
              children: /*#__PURE__*/(0, react_jsx_runtime__WEBPACK_IMPORTED_MODULE_0__.jsxs)(\\"a\\", {
                className: \\"tw-qa flex tw-ra tw-sa tw-ta tw-ua tw-va\\",
                href: \\"https://vercel.com?utm_source=create-next-app&utm_medium=default-template-tw&utm_campaign=create-next-app\\",
                target: \\"_blank\\",
                rel: \\"noopener noreferrer\\",
                children: [\\"By \\", /*#__PURE__*/react_jsx_runtime__WEBPACK_IMPORTED_MODULE_0__.jsx(next_image__WEBPACK_IMPORTED_MODULE_1___default(), {
                  src: \\"/vercel.svg\\",
                  alt: \\"Vercel Logo\\",
                  className: \\"tw-wa\\",
                  width: 100,
                  height: 24,
                  priority: true
                })]
              })
            })]
          }), /*#__PURE__*/react_jsx_runtime__WEBPACK_IMPORTED_MODULE_0__.jsx(\\"div\\", {
            className: \\"relative flex tw-ra tw-xa tw-ya tw-za tw-ab tw-bb tw-cb tw-db tw-eb tw-fb tw-gb tw-hb tw-ib tw-jb tw-kb tw-lb tw-mb tw-nb tw-ob tw-pb tw-qb tw-rb tw-sb tw-tb tw-ub tw-vb tw-wb\\",
            children: /*#__PURE__*/react_jsx_runtime__WEBPACK_IMPORTED_MODULE_0__.jsx(next_image__WEBPACK_IMPORTED_MODULE_1___default(), {
              className: \\"relative tw-xb tw-wa\\",
              src: \\"/next.svg\\",
              alt: \\"Next.js Logo\\",
              width: 180,
              height: 37,
              priority: true
            })
          }), /*#__PURE__*/(0, react_jsx_runtime__WEBPACK_IMPORTED_MODULE_0__.jsxs)(\\"div\\", {
            className: \\"tw-yb grid tw-zb tw-ac tw-bc tw-cc\\",
            children: [/*#__PURE__*/(0, react_jsx_runtime__WEBPACK_IMPORTED_MODULE_0__.jsxs)(\\"a\\", {
              href: \\"https://nextjs.org/docs?utm_source=create-next-app&utm_medium=default-template-tw&utm_campaign=create-next-app\\",
              className: \\"group tw-dc border tw-ec tw-fc tw-gc tw-hc tw-ic tw-jc tw-kc tw-lc\\",
              target: \\"_blank\\",
              rel: \\"noopener noreferrer\\",
              children: [/*#__PURE__*/(0, react_jsx_runtime__WEBPACK_IMPORTED_MODULE_0__.jsxs)(\\"h2\\", {
                className: \`\${next_font_google_target_css_path_pages_index_tsx_import_Inter_arguments_subsets_latin_variableName_inter___WEBPACK_IMPORTED_MODULE_2___default().className} tw-mc tw-nc tw-oc\`,
                children: [\\"Docs \\", /*#__PURE__*/react_jsx_runtime__WEBPACK_IMPORTED_MODULE_0__.jsx(\\"span\\", {
                  className: \\"tw-pc tw-qc tw-rc tw-sc\\",
                  children: \\"->\\"
                })]
              }), /*#__PURE__*/react_jsx_runtime__WEBPACK_IMPORTED_MODULE_0__.jsx(\\"p\\", {
                className: \`\${next_font_google_target_css_path_pages_index_tsx_import_Inter_arguments_subsets_latin_variableName_inter___WEBPACK_IMPORTED_MODULE_2___default().className} tw-tc tw-uc tw-j tw-vc\`,
                children: \\"Find in-depth information about Next.js features and API.\\"
              })]
            }), /*#__PURE__*/(0, react_jsx_runtime__WEBPACK_IMPORTED_MODULE_0__.jsxs)(\\"a\\", {
              href: \\"https://nextjs.org/learn?utm_source=create-next-app&utm_medium=default-template-tw&utm_campaign=create-next-app\\",
              className: \\"group tw-dc border tw-ec tw-fc tw-gc tw-hc tw-ic tw-jc tw-kc tw-lc\\",
              target: \\"_blank\\",
              rel: \\"noopener noreferrer\\",
              children: [/*#__PURE__*/(0, react_jsx_runtime__WEBPACK_IMPORTED_MODULE_0__.jsxs)(\\"h2\\", {
                className: \`\${next_font_google_target_css_path_pages_index_tsx_import_Inter_arguments_subsets_latin_variableName_inter___WEBPACK_IMPORTED_MODULE_2___default().className} tw-mc tw-nc tw-oc\`,
                children: [\\"Learn \\", /*#__PURE__*/react_jsx_runtime__WEBPACK_IMPORTED_MODULE_0__.jsx(\\"span\\", {
                  className: \\"tw-pc tw-qc tw-rc tw-sc\\",
                  children: \\"->\\"
                })]
              }), /*#__PURE__*/react_jsx_runtime__WEBPACK_IMPORTED_MODULE_0__.jsx(\\"p\\", {
                className: \`\${next_font_google_target_css_path_pages_index_tsx_import_Inter_arguments_subsets_latin_variableName_inter___WEBPACK_IMPORTED_MODULE_2___default().className} tw-tc tw-uc tw-j tw-vc\`,
                children: \\"Learn about Next.js in an interactive course with\\\\xa0quizzes!\\"
              })]
            }), /*#__PURE__*/(0, react_jsx_runtime__WEBPACK_IMPORTED_MODULE_0__.jsxs)(\\"a\\", {
              href: \\"https://vercel.com/templates?framework=next.js&utm_source=create-next-app&utm_medium=default-template-tw&utm_campaign=create-next-app\\",
              className: \\"group tw-dc border tw-ec tw-fc tw-gc tw-hc tw-ic tw-jc tw-kc tw-lc\\",
              target: \\"_blank\\",
              rel: \\"noopener noreferrer\\",
              children: [/*#__PURE__*/(0, react_jsx_runtime__WEBPACK_IMPORTED_MODULE_0__.jsxs)(\\"h2\\", {
                className: \`\${next_font_google_target_css_path_pages_index_tsx_import_Inter_arguments_subsets_latin_variableName_inter___WEBPACK_IMPORTED_MODULE_2___default().className} tw-mc tw-nc tw-oc\`,
                children: [\\"Templates \\", /*#__PURE__*/react_jsx_runtime__WEBPACK_IMPORTED_MODULE_0__.jsx(\\"span\\", {
                  className: \\"tw-pc tw-qc tw-rc tw-sc\\",
                  children: \\"->\\"
                })]
              }), /*#__PURE__*/react_jsx_runtime__WEBPACK_IMPORTED_MODULE_0__.jsx(\\"p\\", {
                className: \`\${next_font_google_target_css_path_pages_index_tsx_import_Inter_arguments_subsets_latin_variableName_inter___WEBPACK_IMPORTED_MODULE_2___default().className} tw-tc tw-uc tw-j tw-vc\`,
                children: \\"Discover and deploy boilerplate example Next.js\\\\xa0projects.\\"
              })]
            }), /*#__PURE__*/(0, react_jsx_runtime__WEBPACK_IMPORTED_MODULE_0__.jsxs)(\\"a\\", {
              href: \\"https://vercel.com/new?utm_source=create-next-app&utm_medium=default-template-tw&utm_campaign=create-next-app\\",
              className: \\"group tw-dc border tw-ec tw-fc tw-gc tw-hc tw-ic tw-jc tw-kc tw-lc\\",
              target: \\"_blank\\",
              rel: \\"noopener noreferrer\\",
              children: [/*#__PURE__*/(0, react_jsx_runtime__WEBPACK_IMPORTED_MODULE_0__.jsxs)(\\"h2\\", {
                className: \`\${next_font_google_target_css_path_pages_index_tsx_import_Inter_arguments_subsets_latin_variableName_inter___WEBPACK_IMPORTED_MODULE_2___default().className} tw-mc tw-nc tw-oc\`,
                children: [\\"Deploy \\", /*#__PURE__*/react_jsx_runtime__WEBPACK_IMPORTED_MODULE_0__.jsx(\\"span\\", {
                  className: \\"tw-pc tw-qc tw-rc tw-sc\\",
                  children: \\"->\\"
                })]
              }), /*#__PURE__*/react_jsx_runtime__WEBPACK_IMPORTED_MODULE_0__.jsx(\\"p\\", {
                className: \`\${next_font_google_target_css_path_pages_index_tsx_import_Inter_arguments_subsets_latin_variableName_inter___WEBPACK_IMPORTED_MODULE_2___default().className} tw-tc tw-uc tw-j tw-vc\`,
                children: \\"Instantly deploy your Next.js site to a shareable URL with Vercel.\\"
              })]
            })]
          })]
        });
      }

      /***/
    },

    /***/918: /***/module => {
      module.exports = require(\\"next/dist/shared/lib/amp-context.js\\");

      /***/
    },

    /***/732: /***/module => {
      module.exports = require(\\"next/dist/shared/lib/amp-mode.js\\");

      /***/
    },

    /***/796: /***/module => {
      module.exports = require(\\"next/dist/shared/lib/head-manager-context.js\\");

      /***/
    },

    /***/486: /***/module => {
      module.exports = require(\\"next/dist/shared/lib/image-blur-svg.js\\");

      /***/
    },

    /***/744: /***/module => {
      module.exports = require(\\"next/dist/shared/lib/image-config-context.js\\");

      /***/
    },

    /***/843: /***/module => {
      module.exports = require(\\"next/dist/shared/lib/image-config.js\\");

      /***/
    },

    /***/552: /***/module => {
      module.exports = require(\\"next/dist/shared/lib/image-loader\\");

      /***/
    },

    /***/470: /***/module => {
      module.exports = require(\\"next/dist/shared/lib/side-effect.js\\");

      /***/
    },

    /***/618: /***/module => {
      module.exports = require(\\"next/dist/shared/lib/utils/warn-once.js\\");

      /***/
    },

    /***/689: /***/module => {
      module.exports = require(\\"react\\");

      /***/
    },

    /***/997: /***/module => {
      module.exports = require(\\"react/jsx-runtime\\");

      /***/
    }
  };

  ;

  // load runtime
  var __webpack_require__ = require(\\"../webpack-runtime.js\\");
  __webpack_require__.C(exports);
  var __webpack_exec__ = moduleId => __webpack_require__(__webpack_require__.s = moduleId);
  var __webpack_exports__ = __webpack_require__.X(0, [463, 262], () => __webpack_exec__(957));
  module.exports = __webpack_exports__;
})();"
`;

exports[`js handler > preProcessRawCode case 0 1`] = `
"<script setup lang=\\"ts\\">
import { twMerge } from 'tailwind-merge'

const aaa = twMerge('px-2 py-1 bg-red hover:bg-dark-red', 'p-3 bg-[#B91C1C]')

</script>

<template>
  <main class=\\"u i o p a s \\">
    <nav :class=\\"aaa\\">aaa</nav>
  </main>
</template>

<script lang=\\"ts\\">
import { onMounted, defineComponent } from 'vue'

export default defineComponent({
  setup() {
    onMounted(() => {
      const clipPath = '';
      document.documentElement.animate(
        {
          clipPath
        },
        {
          duration: 500,
          easing: /* tw-mangle ignore */ 'ease-out',
          pseudoElement: '::view-transition-new(root)'
        })
      document.documentElement.animate(
        {
          clipPath
        },
        {
          duration: 500,
          easing: 'ease-out',
          pseudoElement: '::view-transition-new(root)'
        }
      )
    })
    return {}
  }
})

</script>

<style scoped>
.logo {
  height: 6em;
  padding: 1.5em;
  will-change: filter;
  transition: filter 300ms;
}

.logo:hover {
  filter: drop-shadow(0 0 2em #646cffaa);
}

.logo.vue:hover {
  filter: drop-shadow(0 0 2em #42b883aa);
}
</style>
"
`;

exports[`js handler > preProcessRawCode case 0 2`] = `
Map {
  "justify-between" => "a",
  "min-h-screen" => "i",
  "items-center" => "p",
  "flex-col" => "o",
  "flex" => "u",
  "p-24" => "s",
}
`;

exports[`js handler > preProcessRawCode case 1 1`] = `
"<script setup lang=\\"ts\\">
import { twMerge } from 'tailwind-merge'
// 'hover:bg-dark-red i i'
const aaa = twMerge('px-2 py-1 bg-red-100 hover:bg-red-800', 'p-3 bg-[#B91C1C]')

</script>

<template>
  <main class=\\"i i i i i i \\">
    <nav :class=\\"aaa\\">{{ aaa }}</nav>
    <div class=\\"i i i i i i i i\\">
      <p
        class=\\"i i i i i i i i i i i i i i i i i i  i i i i i\\">
        Get started by editing&nbsp;
        <code class=\\"i i\\">pages/index.tsx</code>
      </p>
      <div
        class=\\"i i i i i i i i i i i i i i i i i\\">
        <a class=\\"i i i i i i i\\"
          href=\\"https://vercel.com?utm_source=create-next-app&utm_medium=default-template-tw&utm_campaign=create-next-app\\"
          target=\\"_blank\\" rel=\\"noopener noreferrer\\">
          By
          <img src=\\"/vite.svg\\" alt=\\"Vercel Logo\\" class=\\"i\\" priority />
        </a>
      </div>
    </div>

    <div
      class=\\"i i i i i i i i before:bg-gradient-radial i i i i i i i i i after:bg-gradient-conic i i i i i i i i i i\\">
      <img class=\\"i i i\\" src=\\"./assets/vue.svg\\" alt=\\"Next.js Logo\\"
        priority />
    </div>

    <div class=\\"i i i i i i \\">
      <a href=\\"https://nextjs.org/docs?utm_source=create-next-app&utm_medium=default-template-tw&utm_campaign=create-next-app\\"
        class=\\"group i i i i i i i i i i\\"
        target=\\"_blank\\" rel=\\"noopener noreferrer\\">
        <h2 class=\\"i i i i\\">
          Docs <span
            class=\\"i i i i\\">-&gt;</span>
        </h2>
        <p class=\\"i i i i\\">Find in-depth information about Next.js
          features and API.</p>
      </a>

      <a href=\\"https://nextjs.org/learn?utm_source=create-next-app&utm_medium=default-template-tw&utm_campaign=create-next-app\\"
        class=\\"group i i i i i i i i i i\\"
        target=\\"_blank\\" rel=\\"noopener noreferrer\\">
        <h2 class=\\"i i i i\\">
          Learn <span
            class=\\"i i i i\\">-&gt;</span>
        </h2>
        <p class=\\"i i i i\\">Learn about Next.js in an interactive
          course with&nbsp;quizzes!</p>
      </a>

      <a href=\\"https://vercel.com/templates?framework=next.js&utm_source=create-next-app&utm_medium=default-template-tw&utm_campaign=create-next-app\\"
        class=\\"group i i i i i i i i i i\\"
        target=\\"_blank\\" rel=\\"noopener noreferrer\\">
        <h2 class=\\"i i i i\\">
          Templates <span
            class=\\"i i i i\\">-&gt;</span>
        </h2>
        <p class=\\"i i i i\\">Discover and deploy boilerplate example
          Next.js&nbsp;projects.</p>
      </a>

      <a href=\\"https://vercel.com/new?utm_source=create-next-app&utm_medium=default-template-tw&utm_campaign=create-next-app\\"
        class=\\"group i i i i i i i i i i\\"
        target=\\"_blank\\" rel=\\"noopener noreferrer\\">
        <h2 class=\\"i i i i\\">
          Deploy <span
            class=\\"i i i i\\">-&gt;</span>
        </h2>
        <p class=\\"i i i i\\">Instantly deploy your Next.js site to a
          shareable URL with Vercel.</p>
      </a>
    </div>
  </main>
</template>

<script lang=\\"ts\\">
import { onMounted, defineComponent } from 'vue'

export default defineComponent({
  setup() {
    onMounted(() => {
      const clipPath = '';
      document.documentElement.animate(
        {
          clipPath
        },
        {
          duration: 500,
          easing: /* tw-mangle ignore */ 'i',
          pseudoElement: '::view-i-new(root)'
        })
      document.documentElement.animate(
        {
          clipPath
        },
        {
          duration: 500,
          easing: 'i',
          pseudoElement: '::view-i-new(root)'
        }
      )
    })
    return {}
  }
})

</script>

<style scoped>
.logo {
  height: 6em;
  padding: 1.5em;
  will-change: i;
  i: i 300ms;
}

.logo:hover {
  i: i(0 0 2em #646cffaa);
}

.logo.vue:hover {
  i: i(0 0 2em #42b883aa);
}
</style>
"
`;

exports[`js handler > preProcessRawCode case 1 2`] = `
Map {
  "dark:drop-shadow-[0_0_0.3rem_#ffffff70]" => "i",
  "before:dark:bg-gradient-to-br" => "i",
  "hover:dark:border-neutral-700" => "i",
  "before:dark:from-transparent" => "i",
  "hover:dark:bg-neutral-800/30" => "i",
  "motion-reduce:transform-none" => "i",
  "after:dark:via-[#0141ff]/40" => "i",
  "before:dark:to-blue-700/10" => "i",
  "group-hover:translate-x-1" => "i",
  "after:dark:from-sky-900" => "i",
  "before:-translate-x-1/2" => "i",
  "dark:border-neutral-800" => "i",
  "lg:dark:bg-zinc-800/30" => "i",
  "lg:pointer-events-auto" => "i",
  "after:translate-x-1/3" => "i",
  "before:to-transparent" => "i",
  "hover:border-gray-300" => "i",
  "transition-transform" => "i",
  "before:content-['']" => "i",
  "before:lg:h-[360px]" => "i",
  "before:rounded-full" => "i",
  "dark:bg-zinc-800/30" => "i",
  "pointer-events-none" => "i",
  "after:content-['']" => "i",
  "after:from-sky-200" => "i",
  "after:via-blue-200" => "i",
  "border-transparent" => "i",
  "place-items-center" => "i",
  "backdrop-blur-2xl" => "i",
  "before:from-white" => "i",
  "dark:from-inherit" => "i",
  "hover:bg-gray-100" => "i",
  "transition-colors" => "i",
  "before:h-[300px]" => "i",
  "before:w-[480px]" => "i",
  "bg-gradient-to-b" => "i",
  "bg-gradient-to-t" => "i",
  "after:h-[180px]" => "i",
  "after:w-[240px]" => "i",
  "before:absolute" => "i",
  "before:blur-2xl" => "i",
  "border-gray-300" => "i",
  "dark:from-black" => "i",
  "justify-between" => "i",
  "after:absolute" => "i",
  "after:blur-2xl" => "i",
  "dark:via-black" => "i",
  "justify-center" => "i",
  "lg:bg-gray-200" => "i",
  "lg:grid-cols-4" => "i",
  "bg-red-200/40" => "i",
  "bg-red-200/70" => "i",
  "bg-red-200/90" => "i",
  "font-semibold" => "i",
  "from-zinc-200" => "i",
  "lg:rounded-xl" => "i",
  "inline-block" => "i",
  "items-center" => "i",
  "lg:text-left" => "i",
  "max-w-[30ch]" => "i",
  "min-h-screen" => "i",
  "after:-z-20" => "i",
  "dark:invert" => "i",
  "drop-shadow" => "i",
  "text-[16px]" => "i",
  "text-center" => "i",
  "bg-red-200" => "i",
  "from-white" => "i",
  "lg:bg-none" => "i",
  "opacity-50" => "i",
  "rounded-lg" => "i",
  "transition" => "i",
  "font-bold" => "i",
  "font-mono" => "i",
  "items-end" => "i",
  "lg:border" => "i",
  "lg:h-auto" => "i",
  "lg:static" => "i",
  "lg:w-auto" => "i",
  "max-w-5xl" => "i",
  "via-white" => "i",
  "border-b" => "i",
  "bottom-0" => "i",
  "ease-out" => "i",
  "flex-col" => "i",
  "relative" => "i",
  "text-2xl" => "i",
  "lg:flex" => "i",
  "lg:mb-0" => "i",
  "text-sm" => "i",
  "border" => "i",
  "filter" => "i",
  "left-0" => "i",
  "lg:p-0" => "i",
  "lg:p-4" => "i",
  "w-full" => "i",
  "fixed" => "i",
  "gap-2" => "i",
  "mb-32" => "i",
  "top-0" => "i",
  "flex" => "i",
  "grid" => "i",
  "h-48" => "i",
  "mb-3" => "i",
  "p-24" => "i",
  "pb-6" => "i",
  "pt-8" => "i",
  "px-5" => "i",
  "py-4" => "i",
  "z-10" => "i",
  "m-0" => "i",
  "p-8" => "i",
}
`;

exports[`js handler > preserve-fn-case0.js case 0 1`] = `
"import { clsx } from \\"clsx\\";
import { twMerge } from \\"tailwind-merge\\";

export function cn(...inputs) {
  return twMerge(clsx(inputs));
}

cn('w-10 h-10 b and a')

cn(\`w-2 h-2 bg-red-600 and bg-red-600/50\`)

twMerge('w-1 h-1 bg-red-400 and bg-red-400/50')"
`;

exports[`js handler > preserve-fn-case0.js case 1 1`] = `
"import { clsx } from \\"clsx\\";
import { twMerge } from \\"tailwind-merge\\";

export function cn(...inputs) {
  return twMerge(clsx(inputs));
}

cn('w-10 h-10 bg-red-500 and bg-red-500/50')

cn(\`w-2 h-2 bg-red-600 and bg-red-600/50\`)

twMerge('e f g and h')"
`;

exports[`js handler > preserve-fn-case0.js case 1 2`] = `
{
  "bg-red-400": "g",
  "bg-red-400/50": "h",
  "h-1": "f",
  "w-1": "e",
}
`;

exports[`js handler > preserve-fn-case0.js case 2 1`] = `
"import { clsx } from \\"clsx\\";
import { twMerge } from \\"tailwind-merge\\";

export function cn(...inputs) {
  return twMerge(clsx(inputs));
}

cn('w-10 h-10 b and a')

cn(\`c d bg-red-600 and bg-red-600/50\`)

twMerge('w-1 h-1 bg-red-400 and bg-red-400/50')"
`;

exports[`js handler > preserve-fn-case0.js case 2 2`] = `
Map {
  "bg-red-500/50" => "a",
  "bg-red-500" => "b",
  "w-2" => "c",
  "h-2" => "d",
}
`;

exports[`js handler > preserve-fn-case0.js case 3 1`] = `
"import { clsx } from \\"clsx\\";
import { twMerge } from \\"tailwind-merge\\";

export function cn(...inputs) {
  return twMerge(clsx(inputs));
}

cn('w-10 h-10 bg-red-500 and bg-red-500/50')

cn(\`w-2 h-2 bg-red-600 and bg-red-600/50\`)

twMerge('w-1 h-1 bg-red-400 and bg-red-400/50')"
`;

exports[`js handler > preserve-fn-case0.js case 3 2`] = `Map {}`;

exports[`js handler > trailing slash case 0 1`] = `"document.getElementById(\\"#app\\").classList.add(\\"tw-a tw-b\\");"`;

exports[`js handler > trailing slash case 1 1`] = `"document.querySelector(\\"#app\\").classList.add(\\"tw-a tw-b\\");"`;

exports[`js handler > trailing slash case 2 1`] = `"document.querySelector(\\"#app\\").classList.add(\\"tw-a tw-b tw-a s tw-a\\");"`;

exports[`js handler > z-10 not transform 1`] = `
"{
  className: \\"tw-a tw-b tw-c tw-d tw-e tw-f tw-g tw-h\\";
}"
`;

exports[`js handler > z-10 not transform with splitQuote false 1`] = `
"{
  className: \\"tw-a tw-b tw-c tw-d tw-e tw-f tw-g tw-h\\";
}"
`;
